All_Component_DX/force-app/main/default/objects/SPM_Account_Summary__c/SPM_Account_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the summary Information of Metrics at Account Level</description>
    <label>SPM Account Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Account Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>