All_Component_DX/force-app/main/default/objects/SPM_Account_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account for which summary is computed</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPM Account Summaries</relationshipLabel>
    <relationshipName>SPM_Account_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>