All_Component_DX/force-app/main/default/objects/SPM_Account_Summary__c/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <description>Holds the calculation method.</description>
    <label>Calculation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>