All_Component_DX/force-app/main/default/objects/SPM_Account_Summary__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Holds the end date of the month during which the Metric value was computed.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>