All_Component_DX/force-app/main/default/objects/SPM_Account_Summary__c/fields/Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_Value__c</fullName>
    <description>Holds the Summary Value. It can hold values in percentage (FTF %) and number (MTTR minutes).</description>
    <label>Metric Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>