All_Component_DX/force-app/main/default/objects/SPM_Account_Summary__c/fields/Metrics_Description__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Description__c</fullName>
    <description>Holds the description added for the Metric. Used for filtering and Identifying the rows for which it was computed.</description>
    <label>Metrics Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>